flux/apps/base/filebrowser/filebrowser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  labels:
    app: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: docker.io/gtstef/filebrowser:latest
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: filebrowser-data
              mountPath: "/data"
            - name: config
              mountPath: "/etc/filebrowser/config.yaml"
              subPath: "config.yaml"
              readOnly: true
      volumes:
        - name: filebrowser-data
          persistentVolumeClaim:
            claimName: filebrowser-data
        - name: config
          configMap:
            name: filebrowser-config
