flux/apps/base/filebrowser/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-service
spec:
  selector:
    app: filebrowser
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
