flux/apps/base/filebrowser/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: filebrowser
spec:
  parentRefs:
    - name: default-gateway
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: filebrowser-service
          port: 80
