flux/apps/base/filebrowser/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-filebrowser
spec:
  description: allow filebrowser ingress
  endpointSelector:
    matchLabels:
      app: filebrowser
  ingress:
    - fromEntities:
        - ingress
